@@ -1,0 +1,29 @@
+common
+complex
+crypt
+gcccompat
+grp
+locale
+math
+math-asm
+module
+netlib
+pthread
+pwd
+resolv
+resource
+scl
+signal
+stat
+stdio
+stdlib
+string
+sys
+termios
+test
+time
+unistd
+unix
+UnixLib
+wchar
+*,ffd
